# cpp_cmake_hello_world

./: CMakeLists.txt  README.md  README.md.bak  _build.sh  _clean  _test  _test.sh  _test.sh.bak  compile
TestResults/: gtest_results.txt  index-sort-f.html  index-sort-l.html  index.html  lcov_results.txt  main_coverage.info  main_filtered.info
TestResults/CodeCoverage/: index-sort-f.html  index-sort-l.html  index.html
TestResults/CodeCoverage/sources/: Solution.cpp.func-sort-c.html  Solution.cpp.func.html  Solution.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
TestResults/sources/: Solution.cpp.func-sort-c.html  Solution.cpp.func.html  Solution.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
headers/: Solution.h
include/: Student.h
sources/: Solution.cpp  main.cpp
src/: Student.cpp  main.cpp
tests/: Solution_test.cpp  Student_test.cpp  Test_AnswerQueries.cpp  Test_HappyNumber.cpp  Test_Pivot.cpp  Test_RunningSum.cpp  Test_TwoSum.cpp
